- Finishes first version of the presentation. - Adds some "speaker notes" which can be accessed pressing "S".

--- a/docs/presentation/css/theme/league.css
+++ b/docs/presentation/css/theme/league.css
@@ -235,12 +235,16 @@ body {
 /*********************************************
  * IMAGES
  *********************************************/
+ img {
+    z-index: -1;
+ }
+ 
 #logo {
   background: rgba(255, 255, 255, 0);
   border: 0;
   position: absolute;
   top: 20px;
-  right: 30px;
+  right: 15px;
 }
 
 #logo-bottom {
